# dual_autodiff

./: .gitignore  README.md  Report_c1 copy.pages  pyproject.toml  question5.py  report copy.tex  report.tex  report1.tex  tutorial.html
docs/: Makefile  conf.py  dual_autodiff.ipynb  index.rst  question5.ipynb  requirements.txt
docs/_build/doctrees/: .environment 2.pickle.icloud  .index 2.doctree.icloud  environment.pickle  index.doctree
docs/_build/doctrees/material/part1/: .notebook 2.doctree.icloud  notebook.doctree
docs/_build/doctrees/material/part2/: .notebook 2.doctree.icloud  notebook.doctree
docs/_build/html/: .buildinfo  .genindex 2.html.icloud  .index 2.html.icloud  .objects 2.inv.icloud  .objects 3.inv.icloud  .py-modindex 2.html.icloud  .search 2.html.icloud  .searchindex 2.js.icloud  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: .index.rst 2.txt.icloud  index.rst.txt
docs/_build/html/_static/: .._sphinx_javascript_frameworks_compat 2.js.icloud  .basic 2.css.icloud  .binder_badge_logo 2.svg.icloud  .binder_badge_logo 3.svg.icloud  .broken_example 2.png.icloud  .doctools 2.js.icloud  .documentation_options 2.js.icloud  .documentation_options 3.js.icloud  .jquery 2.js.icloud  .jupyterlite_badge_logo 2.svg.icloud  .language_data 2.js.icloud  .no_image 2.png.icloud  .no_image 3.png.icloud  .plus 2.png.icloud  .pygments 2.css.icloud  .searchtools 2.js.icloud  .sg_gallery 2.css.icloud  .sg_gallery-binder 2.css.icloud  .sg_gallery-binder 3.css.icloud  .sg_gallery-dataframe 2.css.icloud  .sg_gallery-dataframe 3.css.icloud  .sg_gallery-rendered-html 2.css.icloud  .sg_gallery-rendered-html 3.css.icloud  .style 2.css.icloud  .style 3.css.icloud
docs/_static/: style.css
docs/material/part1/: notebook.rst
docs/material/part2/: notebook.rst
docs/material/part3/: notebook.rst
docs/material/part4/: notebook.rst
docs/material/part5/: notebook.ipynb
dual_autodiff/: __init__.py  dual.py  version.py
dual_autodiff.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dual_autodiff_x/: pyproject.toml  setup.py
dual_autodiff_x/dual_autodiff_x/: dual.pyx
tests/: autodiff_tools.py
(+18 files in other folders)
