[build-system]
requires = ["setuptools", "wheel","setuptools_scm","build"] 
build-backend = "setuptools.build_meta"

[project]
name="dual_autodiff"
description="A python package that performs automatic differentiation using dual numbers"
readme="README.md"
requires-python=">=3.9"
authors=[{name="Hania Rezk", email="hhmmer2@cam.ac.uk"}]
keywords=["dual numbers", "automatic differentiation"]
dependencies=["numpy"]
version="0.0.5"


[tool.setuptools.packages.find]
where = ["."]
