[build-system]
requires = ["setuptools", "Cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
dynamic = ["version"]
description = "A Python package that performs automatic differentiation using dual numbers"
requires-python = ">=3.9"
authors = [{name = "Hania Rezk", email = "hhmmer2@cam.ac.uk"}]
keywords = ["dual numbers", "automatic differentiation"]
dependencies = ["numpy>=1.23"]

[tool.setuptools.packages.find]
where = ["dual_autodiff_x"]
